NOF9 styling - fixed issue with scrolling when text goes behind footer

--- a/Spa2/nakedobjectsspa/src/app/home/home.component.css
+++ b/Spa2/nakedobjectsspa/src/app/home/home.component.css
@@ -6,6 +6,7 @@
     color: white;
     font-size: 11pt; 
     font-weight: 100;
+    padding-bottom: 60px;
 }
 
 .header {
