--- a/Spa2/nakedobjectsspa/src/app/list/list.component.css
+++ b/Spa2/nakedobjectsspa/src/app/list/list.component.css
@@ -5,6 +5,7 @@
     overflow-y: auto;
     display: block;
     font-weight: 100;
+    padding-bottom: 60px;
 }
 
 .header {
