--- a/Spa2/nakedobjectsspa/src/app/object/object.component.css
+++ b/Spa2/nakedobjectsspa/src/app/object/object.component.css
@@ -5,7 +5,8 @@
     font-size: 11pt; 
     font-weight: 100;
     display: block;
-        height: 100%;
+    height: 100%;
+    padding-bottom: 60px;
 }
 
 .object {
